--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,16 @@
 {% block content%}
 
 <br/>
-<h1>Welcome to Kind Computing</h1>
+<h1>Gratitude Booster</h1>
+
+<p>Helping people be more thankful in their lives.</p>
+<p>This works by providing them with a tool that would: 
+    <ul>
+    <li>remind them to be thankful, </li>
+    <li>suggest gratitude messages to use, and </li> 
+    <li>provide information about the impact that their thankful acts can have on others</li>
+    </ul>
+</p>
 
 
 
