--- a/templates/base.html
+++ b/templates/base.html
@@ -69,18 +69,18 @@
         <div class="navbar-nav">
           {% if user.is_authenticated %} 
           <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="guessAoK" href="/guessAoK">Guess</a>
-          <a class="nav-item nav-link" id="listofAoK" href="/listofAoK">List</a>
+          <a class="nav-item nav-link" id="getinvolved" href="/get-involved">Get Involved</a>
+          <!-- <a class="nav-item nav-link" id="listofAoK" href="/listofAoK">List</a>
           <a class="nav-item nav-link" id="edit" href="/edit">Edit</a>
           <a class="nav-item nav-link" id="aok-scrapper" href="/aok-scrapper">Scrap</a>
           <a class="nav-item nav-link" id="aok-model" href="/aok-model">Models</a>
           <a class="nav-item nav-link" id="media" href="/media">Media</a>
           <a class="nav-item nav-link" id="chatbot" href="/chatbot">Chatbot</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>-->
           {% else %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="guessAoK" href="/guessAoK">Guess</a>
-            <a class="nav-item nav-link" id="login" href="/login">Login</a>
+         <!-- <a class="nav-item nav-link" id="guessAoK" href="/guessAoK">Guess</a>
+            <a class="nav-item nav-link" id="login" href="/login">Login</a>-->
            <!-- <a class="nav-item nav-link" id="sign-out" href="/sign-up">Sign Up</a>
             <!-- <a class="nav-item nav-link" id="sign-out" href="/sign-up">Sign Up</a>-->
           {% endif %}
