--- a/templates/home.html
+++ b/templates/home.html
@@ -8,11 +8,11 @@
 <h1>Gratitude Booster</h1>
 
 <p>Helping people be more thankful in their lives.</p>
-<p>This works by providing them with a tool that would: 
+<p>This works by providing them with a tool that: 
     <ul>
-    <li>remind them to be thankful, </li>
-    <li>suggest gratitude messages to use, and </li> 
-    <li>provide information about the impact that their thankful acts can have on others</li>
+    <li>reminds them to be thankful, </li>
+    <li>suggests gratitude messages to use, and </li> 
+    <li>informs them about the positive impact of their thankful acts on others</li>
     </ul>
 </p>
 
