--- a/static/styles/email_page.css
+++ b/static/styles/email_page.css
@@ -4,14 +4,30 @@
     padding: 0;
 }
 body {
-    /* background-image: url("/static/images/bg.jpg"); */
-    /* background-repeat: no-repeat;
+    /* background-image: url("/static/images/bg.jpg");
+    background-repeat: no-repeat; 
     background-attachment: fixed;
-    background-size: 100% 100%; */
-    background-color: rgb(25, 69, 4);
+    background-size: 100% 100%;  */
+    background-color: rgb(48, 47, 50);
     border: 5em;
     display:flex; 
     flex-direction:column; 
     justify-content:center;
-    
+    justify-items: center;
+    padding: 70px 0;
 }
+
+.content {
+    width: 50%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    max-width: 90%;
+    margin: auto;
+    background: white;
+    padding: 10px;
+    /* align-self: center; */
+    border: 3px solid;
+    text-align: center;
+    
+  }
