--- a/templates/email_page.html
+++ b/templates/email_page.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link
    rel="stylesheet"
    href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -22,31 +23,22 @@
 </head>
 
     <body>
-       
 
+        <div class="content">
         <h3> Whyyyyy not by grateful today?</h3>
         <h4> {{greetings}} <i>{{recipient_name}}</i> </h4>
         {%if gratitudeMessage %}
         <p> Add a leaf saying <b>"{{gratitudeMessage}}"</b> to the <a href="{{gratitudeTreeLink}}" target="_blank">gratitude tree</a> <p>
 
-            <form method="POST">
-                <h3 align="center">Send gratitude message</h3>
-                
-                <div class="form-group">
-                    <input type="text" class="form-control" id="email" name="gratitudeMsg" placeholder="gratitude message"/>
-                </div>
-    
-                <br/>
-                <button type="submit" class="btn btn-primary">send</button>
-            </form>
-
         {% endif %}
-        <p>
-        <img src="https://media.tenor.com/-NZbBgfGK4cAAAAM/amazing-nubbies.gif">
-        </p>
+        
+        <img src="{{url_for('static', filename='images/bg.jpg ', _external=True)}}" />
+        
 
         <p>{{ender}}</p>
         <p>{{signature}}</p>
+        </div>
+
     </body>
 
 </html>
