--- a/static/styles/email_page.css
+++ b/static/styles/email_page.css
@@ -4,16 +4,14 @@
     padding: 0;
 }
 body {
-    /* background-image: url("/static/images/bg.jpg");
-    background-repeat: no-repeat; 
-    background-attachment: fixed;
-    background-size: 100% 100%;  */
-    background-color: rgb(48, 47, 50);
+    background-image: url("https://iili.io/HouOL91.jpg");
+    /* background-repeat: no-repeat; 
+    background-attachment: fixed;*/
+    background-size: 100% 120%;  
+    /* background-color: rgb(48, 47, 50); */
     border: 5em;
     display:flex; 
     flex-direction:column; 
-    justify-content:center;
-    justify-items: center;
     padding: 70px 0;
 }
 
