--- a/templates/email_reminder.html
+++ b/templates/email_reminder.html
@@ -1,18 +1,51 @@
 {% extends "email_base.html" %}
 
+{% block styles%}
+
+.img_container {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+
+  
+  /* Centered text */
+.text_img_centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+{% endblock %}
+
+{% block preheader%}
+A small grateful act today
+{% endblock%}
+
+
 {% block content %}
 
 {% set p_style = "font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;" %}
 
-<p style="{{p_style}} font-size:30px"> Why not be grateful today!?</p>
+
+<p style="{{p_style}} font-size:30px"> A Small Thank You, A Big Reward <span style="font-size=12px">(or something that ryhmes better)</span> </p>
 
 <h3>{{greetings}} {{recipient_name}}</h3>
 
 
 {%if gratitudeMessage %}
-        <p> You can add a leaf saying <b>"{{gratitudeMessage}}"</b> to the <a href="{{gratitudeTreeLink}}" target="_blank">gratitude tree</a> <p>
+        <p> Be grateful today bla bla... We can help you by adding a leaf saying <b>"{{gratitudeMessage}}"</b> to the <a href="{{gratitudeTreeLink}}" target="_blank">gratitude tree</a> <p>
 
 {% endif %}
+
+<div class="img_container">
+    <img src="https://media.istockphoto.com/id/1173157613/photo/colorful-autimn-leaves-on-white-wooden-background.jpg?s=170667a&w=0&k=20&c=kwt4yQTLJPufVHcbPk3HXCY8CvuhUv7Fahv_UAthCfE=" alt="gratitude-leaf" style="width:100%;">
+  
+    <div class="text_img_centered">Centered</div>
+  </div> 
+
+<!--<center><img src="https://media.istockphoto.com/id/1173157613/photo/colorful-autimn-leaves-on-white-wooden-background.jpg?s=170667a&w=0&k=20&c=kwt4yQTLJPufVHcbPk3HXCY8CvuhUv7Fahv_UAthCfE=" style="width:100%; max-height: 100%;" /></center>-->
 
 {% endblock %}
 
