--- a/templates/email_reminder.html
+++ b/templates/email_reminder.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block preheader%}
-A small grateful act today
+
 {% endblock%}
 
 
@@ -39,11 +39,11 @@ A small grateful act today
 
 {% endif %}
 
-<div class="img_container">
+<p class="img_container">
     <img src="https://media.istockphoto.com/id/1173157613/photo/colorful-autimn-leaves-on-white-wooden-background.jpg?s=170667a&w=0&k=20&c=kwt4yQTLJPufVHcbPk3HXCY8CvuhUv7Fahv_UAthCfE=" alt="gratitude-leaf" style="width:100%;">
   
-    <div class="text_img_centered">Centered</div>
-  </div> 
+    <span class="text_img_centered">Centered</span>
+</p> 
 
 <!--<center><img src="https://media.istockphoto.com/id/1173157613/photo/colorful-autimn-leaves-on-white-wooden-background.jpg?s=170667a&w=0&k=20&c=kwt4yQTLJPufVHcbPk3HXCY8CvuhUv7Fahv_UAthCfE=" style="width:100%; max-height: 100%;" /></center>-->
 
