--- a/templates/email_reminder.html
+++ b/templates/email_reminder.html
@@ -5,7 +5,7 @@
 .img_container {
     position: relative;
     text-align: center;
-    color: white;
+    color: black;
   }
 
   
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block preheader%}
-
+Take a moment to express your thanks... and we can help you do so!  ヽ( ⌒o⌒)人(⌒-⌒ )ﾉ 
 {% endblock%}
 
 
@@ -35,16 +35,14 @@
 
 
 {%if gratitudeMessage %}
-        <p> Be grateful today bla bla... We can help you by adding a leaf saying <b>"{{gratitudeMessage}}"</b> to the <a href="{{gratitudeTreeLink}}" target="_blank">gratitude tree</a> <p>
+        <p> Be grateful today bla bla... We can help you... add a leaf, saying <b>"{{gratitudeMessage}}"</b>, to the <a href="{{gratitudeTreeLink}}" target="_blank">gratitude tree</a> <p>
 
 {% endif %}
 
-<p class="img_container">
+
     <img src="https://media.istockphoto.com/id/1173157613/photo/colorful-autimn-leaves-on-white-wooden-background.jpg?s=170667a&w=0&k=20&c=kwt4yQTLJPufVHcbPk3HXCY8CvuhUv7Fahv_UAthCfE=" alt="gratitude-leaf" style="width:100%;">
   
-    <span class="text_img_centered">Centered</span>
-</p> 
-
+   
 <!--<center><img src="https://media.istockphoto.com/id/1173157613/photo/colorful-autimn-leaves-on-white-wooden-background.jpg?s=170667a&w=0&k=20&c=kwt4yQTLJPufVHcbPk3HXCY8CvuhUv7Fahv_UAthCfE=" style="width:100%; max-height: 100%;" /></center>-->
 
 {% endblock %}
