--- a/templates/email_base.html
+++ b/templates/email_base.html
@@ -83,9 +83,25 @@
 
               <!-- START MAIN CONTENT AREA -->
               <tr>
-                <td class="wrapper" style="font-family: sans-serif; font-size: 14px; vertical-align: top; box-sizing: border-box; padding: 20px;">
-                  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
+                
+                <td class="wrapper" style="font-family: sans-serif; font-size: 14px; vertical-align: top; box-sizing: border-box; padding: 20px; padding-bottom: 0px">
+                  <table border="0" cellpadding="10px" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                     <tr>
+                        
+                      <td style="font-family: sans-serif; font-size: 30px; font-weight: bold; color: white; vertical-align: top; background-color:#2596be; border-radius: 3px; ">
+                        {% block header %}<!-- main content area -->{% endblock %}
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+
+              <tr>
+                
+                <td class="wrapper" style="font-family: sans-serif; font-size: 14px; vertical-align: top; box-sizing: border-box; padding: 20px; padding-top: 5px;">
+                  <table border="0" cellpadding="5px" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
+                    <tr>
+                        
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
                         {% block content %}<!-- main content area -->{% endblock %}
                       </td>
