--- a/templates/email_reminder.html
+++ b/templates/email_reminder.html
@@ -24,18 +24,21 @@ Take a moment to express your thanks... and we can help you do so!  ヽ( ⌒o⌒
 {% endblock%}
 
 
-{% block content %}
-
+{% block header%}
 {% set p_style = "font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;" %}
 
 
-<p style="{{p_style}} font-size:30px"> A Small Thank You, A Big Reward <span style="font-size=12px">(or something that ryhmes better)</span> </p>
+A Small Thank You, A Big Reward <span style="font-size:15px;">(or something that ryhmes better)</span>
+{% endblock %}
+{% block content %}
+
+
 
 <h3>{{greetings}} {{recipient_name}}</h3>
 
 
 {%if gratitudeMessage %}
-        <p> Be grateful today bla bla... We can help you... add a leaf, saying <b>"{{gratitudeMessage}}"</b>, to the <a href="{{gratitudeTreeLink}}" target="_blank">gratitude tree</a> <p>
+        <p> Be grateful today bla bla... We can help you... add a leaf, saying <span style="font-size: 16px; font-weight:bold">"{{gratitudeMessage}}"</span>, to the <span style="font-size:16px;"><a href="{{gratitudeTreeLink}}" target="_blank">gratitude tree</a></span> <p>
 
 {% endif %}
 
